--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,7 +47,7 @@ spring.messages.encoding=UTF-8
 
 # 配置数据库
 
-spring.datasource.url=jdbc:mysql://115.29.32.62:3306/ligh?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ligh?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=7d428bc667
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
